simplify stream chains